QPID-8537: replace use of constructors marked deprecated-for-removal
(cherry picked from commit 42abe9fdd53e758574ddd68a6c0a88e05c88d214)